# substrate-node-template

pallets/remittance/: Cargo.toml
pallets/remittance/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
